# edge-veda

./: .gitignore  .gitmodules  BENCHMARKS.md  CHANGELOG.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  EdgeVedaCore.podspec  FEATURES.md  IMPLEMENTATION_ROADMAP.md  Makefile  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_4_SWIFT_IMPLEMENTATION.md  PLATFORM_HARDENING_SUMMARY.md  README.md  SDK_FEATURE_PARITY_ANALYSIS.md  SECURITY.md  TECHNICAL_AUDIT.md  codecov.yml  prd.txt
.claude/: settings.json
.claude/agents/: android-kotlin-engineer.md  aws-cloud-architect.md  build-devops-engineer.md  cpp-core-engineer.md  flutter-sdk-engineer.md  ios-swift-engineer.md  ml-model-engineer.md  react-native-engineer.md  wasm-web-engineer.md
.claude/hooks/: check-binary-size.sh  pre-commit-lint.sh  validate-memory-safety.sh
.claude/skills/: benchmark-inference.md  generate-ffi-bindings.md  run-cross-compile.md  scaffold-platform-sdk.md  validate-api-consistency.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  codebase-map.md  inference-concerns.md
core/: CMakeLists.txt
core/cmake/: android.toolchain.cmake  edge_veda-config.cmake.in  ios.toolchain.cmake
core/include/: edge_veda.h
core/src/: backend_lifecycle.cpp  backend_lifecycle.h  bridge_jni.cpp  engine.cpp  image_engine.cpp  memory_guard.cpp  memory_guard.h  thread_utils.h  vision_engine.cpp  vulkan_denylist.cpp  vulkan_denylist.h  whisper_engine.cpp
core/tests/: CMakeLists.txt  test_api_guards.cpp  test_backend_detection.cpp  test_concurrency.cpp  test_inference.cpp  test_memory_guard.cpp  test_model_backed.cpp
demo/: index.html
evidence/: dart-analyze-output.txt  dart_analyze.txt  flutter-test-output.txt  flutter_test.txt  functional-checklist.md  soak_managed_20260223T220207.jsonl  test_results.txt
evidence/ab-comparison/: ab-summary.md
evidence/android app/: dart-analyze-output.txt  flutter-test-output.txt  functional-checklist.md
evidence/android-soak-test/: logcat_soak_20260301.txt  soak_managed_20260301T210050.jsonl
evidence/device-session/: session-log.txt  thermal-memory.csv
examples/document_qa/: README.md  pubspec.yaml
examples/health_advisor/: .gitignore  README.md  pubspec.yaml
examples/intent_engine/: README.md  pubspec.yaml
examples/voice_journal/: README.md  pubspec.yaml
flutter/: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  SETUP_SUMMARY.md  STATUS.md  analysis_options.yaml  pubspec.yaml
flutter/android/: build.gradle  proguard-rules.pro
flutter/doc/: API.md
flutter/example/: BENCHMARK.md  README.md  pubspec.yaml
flutter/ios/: edge_veda.podspec
flutter/lib/: edge_veda.dart
flutter/macos/: edge_veda.podspec
flutter/test/: android_build_script_test.dart  android_plugin_test.dart  budget_test.dart  chat_session_structured_stream_test.dart  chat_session_tool_test.dart  edge_veda_test.dart  gbnf_builder_test.dart  jinja_chat_template_test.dart  json_recovery_test.dart  latency_tracker_test.dart  macos_plugin_test.dart  memory_estimator_test.dart  model_manager_test.dart  param_builder_test.dart  runtime_policy_test.dart  schema_validator_test.dart  streaming_test.dart  text_cleaner_test.dart  tool_test.dart
kotlin/: .gitignore  C_INTEGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
kotlin/sample/: errors.txt  settings.gradle.kts
kotlin/src/main/cpp/: CMakeLists.txt  edge_veda_jni.cpp  edge_veda_stubs.cpp
react-native/: .eslintrc.js  .gitignore  .npmignore  INTEGRATION.md  INTEGRATION_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  README.md  app.plugin.js  edge-veda.podspec  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
react-native/android/: build.gradle  gradle.properties
react-native/example/: App.tsx  ChatScreen.tsx  DetectiveScreen.tsx  ImageGenerationScreen.tsx  MainTabs.tsx  ModelSelectionSheet.tsx  README.md  STTScreen.tsx  SettingsScreen.tsx  SoakTestScreen.tsx  VisionScreen.tsx  WelcomeScreen.tsx  theme.ts
react-native/examples/: RuntimeSupervisionExample.ts
react-native/ios/: EdgeVeda.mm  EdgeVeda.swift
react-native/src/: BatteryDrainTracker.ts  Budget.ts  CameraUtils.ts  ChatSession.ts  ChatTemplate.ts  ChatTypes.ts  EdgeVeda.ts  FrameQueue.ts  GbnfBuilder.ts  LatencyTracker.ts  ModelAdvisor.ts  ModelManager.ts  ModelRegistry.ts  NativeEdgeVeda.ts  NativeErrorCode.ts  PerfTrace.ts  RagPipeline.ts  ResourceMonitor.ts  RuntimePolicy.ts  Scheduler.ts  SchemaValidator.ts  Telemetry.ts  ThermalMonitor.ts  ToolRegistry.ts  ToolTemplate.ts  VectorIndex.ts  VisionWorker.ts  WhisperSession.ts  index.tsx  types.ts
scripts/: build-all.sh  build-android.sh  build-ios.sh  build-macos.sh  create_demo_gif.py  download-xcframework.sh  prepare-release.sh  setup.sh  test-inference.sh
swift/: .gitignore  API.md  C_INTEGRATION_COMPLETE.md  INDEX.md  INTEGRATION.md  PROJECT_SUMMARY.md  Package.swift  README.md  SCAFFOLD_COMPLETE.md  STRUCTURE.md  validate.sh
swift/Examples/: ConfigExample.swift  RuntimeSupervisionExample.swift  SimpleExample.swift  StreamingExample.swift
tools/: EXPERIMENTS.md  analyze_trace.py  experiments.json  generate_blog_charts.py
tools/mcp-server/: .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
web/: .gitignore  .npmignore  API.md  LICENSE  QUICKSTART.md  README.md  WEB_SDK_FEATURE_PARITY.md  jest.config.cjs  package-lock.json  package.json  rollup.config.js  tsconfig.json
web/examples/: basic.html  cache-management.ts  runtime-supervision.ts  streaming.ts
web/src/: BatteryDrainTracker.ts  Budget.ts  (+29 more)
(+361 files in other folders)
